--- a/project_3/ask_the_web_agent.ipynb
+++ b/project_3/ask_the_web_agent.ipynb
@@ -240,10 +240,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "94aeb4d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Calling tool `get_current_weather` with args {'city': 'San Diego', 'unit': 'celsius'}\n",
+      "Result: It is 23°C and sunny in San Diego.\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Step 4: Parse the LLM output and call the tool\n",
@@ -265,9 +275,17 @@
     "\n",
     "import re, json\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5-10 lines of code)\n",
-    "\"\"\"\n"
+    "pattern = r'TOOL_CALL:\\s*({.*})'\n",
+    "match = re.search(pattern, raw, flags=re.DOTALL)\n",
+    "if match:\n",
+    "    call_json = json.loads(match.group(1))\n",
+    "    fn_name   = call_json[\"name\"]\n",
+    "    args      = call_json.get(\"args\", {})\n",
+    "    print(f\"\\n Calling tool `{fn_name}` with args {args}\")\n",
+    "    result = globals()[fn_name](**args)\n",
+    "    print(\"Result:\", result)\n",
+    "else:\n",
+    "    print(\"No tool call detected\")\n"
    ]
   },
   {
@@ -286,10 +304,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ce911b28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'description': 'Return the current weather as a human-readable sentence.',\n",
+      " 'name': 'get_current_weather',\n",
+      " 'parameters': {'properties': {'city': {'description': 'Argument city',\n",
+      "                                        'type': 'string'},\n",
+      "                               'unit': {'description': 'Argument unit',\n",
+      "                                        'type': 'string'}},\n",
+      "                'required': ['city'],\n",
+      "                'type': 'object'}}\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Generate a JSON schema for a tool automatically\n",
@@ -310,10 +343,23 @@
     "\n",
     "\n",
     "def to_schema(fn):\n",
-    "    \"\"\"\n",
-    "    YOUR CODE HERE (~8-15 lines of code)\n",
-    "    \"\"\"\n",
-    "    pass\n",
+    "    sig = inspect.signature(fn)\n",
+    "    props = {\n",
+    "        name: {\n",
+    "            'type': 'string' if param.annotation is str else 'number',\n",
+    "            'description': f\"Argument {name}\"\n",
+    "        }\n",
+    "        for name, param in sig.parameters.items()\n",
+    "    }\n",
+    "    return {\n",
+    "        'name': fn.__name__,\n",
+    "        'description': (fn.__doc__ or '').strip().split('\\n')[0],\n",
+    "        'parameters': {\n",
+    "            'type': 'object',\n",
+    "            'properties': props,\n",
+    "            'required': [n for n, p in sig.parameters.items() if p.default is inspect._empty]\n",
+    "        }\n",
+    "    }\n",
     "\n",
     "tool_schema = to_schema(get_current_weather)\n",
     "pprint(tool_schema)"
@@ -321,10 +367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c1163f18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOOL_CALL:{\"name\": \"get_current_weather\", \"args\": { \"city\": \"Boston\" }}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Provide the tool schema to the model\n",
@@ -345,9 +400,19 @@
     "#   which tool to use and with what arguments.\n",
     "# ---------------------------------------------------------\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5-12 lines of code)\n",
-    "\"\"\""
+    "messages=[\n",
+    "    {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
+    "    {\"role\": \"system\", \"name\": \"tool_spec\", \"content\": json.dumps([tool_schema])},\n",
+    "    {\"role\": \"user\", \"content\": \"Is Boston warmer today or Seattle?\"}\n",
+    "]\n",
+    "MODEL = \"gemma3:1b\" # doesn't produce two calls\n",
+    "# MODEL = \"llama3.2:3b\" # produces two calls\n",
+    "raw2 = client.chat.completions.create(\n",
+    "    model=MODEL,\n",
+    "    messages=messages,\n",
+    "    temperature=0.5,\n",
+    ")\n",
+    "print(raw2.choices[0].message.content)"
    ]
   },
   {
@@ -371,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c609d97c",
    "metadata": {},
    "outputs": [],
@@ -394,17 +459,51 @@
     "\n",
     "from langchain.tools import tool\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5 lines of code)\n",
-    "\"\"\""
+    "def get_current_weather(city: str, unit: str = \"celsius\") -> str:\n",
+    "    \"\"\"Return the current weather as a human-readable sentence.\"\"\"\n",
+    "    return f\"It is 23°{unit[0].upper()} and sunny in {city}.\" # no real API call to stay offline-friendly\n",
+    "\n",
+    "@tool\n",
+    "def get_weather(city: str) -> str:\n",
+    "    \"\"\"Get current weather and return results\"\"\"\n",
+    "    return get_current_weather(city)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9552348d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mI need to find out the weather in Seattle to determine if I need an umbrella.\n",
+      "Action: get_weather\n",
+      "Action Input: city=Seattle\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mIt is 23°C and sunny in city=Seattle.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mThe weather in Seattle is sunny, so I don't need an umbrella.\n",
+      "Final Answer: No, you don't need an umbrella in Seattle today.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'Do I need an umbrella in Seattle today?',\n",
+       " 'output': \"No, you don't need an umbrella in Seattle today.\"}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ---------------------------------------------------------\n",
     "# Step 2: Initialize the LangChain Agent\n",
@@ -429,9 +528,21 @@
     "from langchain_community.chat_models import ChatOllama\n",
     "from langchain.agents import initialize_agent, Tool, AgentType\n",
     "\n",
-    "\"\"\"\n",
-    "YOUR CODE HERE (~5 lines of code)\n",
-    "\"\"\"\n"
+    "# MODEL = \"gemma3:1b\"\n",
+    "# MODEL = \"llama3.2:3b\"\n",
+    "MODEL = \"gemma3\"\n",
+    "# MODEL = \"llama2:7b\"\n",
+    "llm = ChatOllama(model=MODEL, temperature=0)\n",
+    "tools = [get_weather]\n",
+    "\n",
+    "agent = initialize_agent(\n",
+    "    tools,\n",
+    "    llm,\n",
+    "    agent=AgentType.ZERO_SHOT_REACT_DESCRIPTION,\n",
+    "    verbose=True,\n",
+    ")\n",
+    "\n",
+    "agent.invoke({\"input\": \"Do I need an umbrella in Seattle today?\"})\n"
    ]
   },
   {
