--- a/project_3/ask_the_web_agent.ipynb
+++ b/project_3/ask_the_web_agent.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "4a536f58",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "0a43c3e4",
    "metadata": {},
    "outputs": [],
@@ -163,10 +163,7 @@
     "  arguments:\n",
     "    city: string\n",
     "    unit: \"celsius\" | \"fahrenheit\"  (optional, default \"celsius\")\n",
-    "\"\"\"\n",
-    "\n",
-    "USER_QUESTION = \"What is the weather in San Diego today?\"\n",
-    "# USER_QUESTION = \"What is your name?\""
+    "\"\"\"\n"
    ]
   },
   {
@@ -181,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "027cb75c",
    "metadata": {},
    "outputs": [
@@ -191,16 +188,11 @@
      "text": [
       "\n",
       " Model output:\n",
-      " TOOL_CALL:{\"name\": \"get_current_weather\", \"args\": { \"city\": \"San Diego\", \"unit\": \"celsius\" }}\n",
-      "\n"
+      " TOOL_CALL:{\"name\": \"get_current_weather\", \"args\": {\"city\": \"San Diego\"}}\n"
      ]
     }
    ],
    "source": [
-    "from openai import OpenAI\n",
-    "\n",
-    "client = OpenAI(api_key = \"ollama\", base_url = \"http://localhost:11434/v1\")\n",
-    "\n",
     "# ---------------------------------------------------------\n",
     "# Step 3: Call the LLM with your prompt\n",
     "# ---------------------------------------------------------\n",
@@ -222,8 +214,13 @@
     "\n",
     "client = OpenAI(api_key = \"ollama\", base_url = \"http://localhost:11434/v1\")\n",
     "\n",
-    "MODEL = \"gemma3:1b\"\n",
+    "# MODEL = \"gemma3:1b\"\n",
     "# MODEL = \"llama3.2:3b\"\n",
+    "MODEL = \"gemma3\"\n",
+    "\n",
+    "USER_QUESTION = \"What is the weather in San Diego today?\"\n",
+    "# USER_QUESTION = \"What is your name?\"\n",
+    "# USER_QUESTION = \"Hello?\"\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=MODEL,\n",
@@ -240,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "94aeb4d8",
    "metadata": {},
    "outputs": [
@@ -249,7 +246,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " Calling tool `get_current_weather` with args {'city': 'San Diego', 'unit': 'celsius'}\n",
+      " Calling tool `get_current_weather` with args {'city': 'San Diego'}\n",
       "Result: It is 23°C and sunny in San Diego.\n"
      ]
     }
