--- a/project_3/ask_the_web_agent.ipynb
+++ b/project_3/ask_the_web_agent.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "ce911b28",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "c1163f18",
    "metadata": {},
    "outputs": [
@@ -372,8 +372,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOOL_CALL:{\"name\": \"get_current_weather\", \"args\": { \"city\": \"Boston\" }}\n",
-      "\n"
+      "TOOL_CALL:{\"name\": \"get_current_weather\", \"args\": {\"city\": \"Boston\", \"unit\": \"celsius\"}}\n"
      ]
     }
    ],
@@ -402,7 +401,8 @@
     "    {\"role\": \"system\", \"name\": \"tool_spec\", \"content\": json.dumps([tool_schema])},\n",
     "    {\"role\": \"user\", \"content\": \"Is Boston warmer today or Seattle?\"}\n",
     "]\n",
-    "MODEL = \"gemma3:1b\" # doesn't produce two calls\n",
+    "# MODEL = \"gemma3:1b\" # doesn't produce two calls\n",
+    "MODEL = \"gemma3\"\n",
     "# MODEL = \"llama3.2:3b\" # produces two calls\n",
     "raw2 = client.chat.completions.create(\n",
     "    model=MODEL,\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "c609d97c",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "9552348d",
    "metadata": {},
    "outputs": [
@@ -479,12 +479,12 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mI need to find out the weather in Seattle to determine if I need an umbrella.\n",
+      "\u001b[32;1m\u001b[1;3mI need to find out the weather in New York to determine if I need an umbrella.\n",
       "Action: get_weather\n",
-      "Action Input: city=Seattle\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3mIt is 23°C and sunny in city=Seattle.\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mThe weather in Seattle is sunny, so I don't need an umbrella.\n",
-      "Final Answer: No, you don't need an umbrella in Seattle today.\u001b[0m\n",
+      "Action Input: city=New York\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3mIt is 23°C and sunny in city=New York.\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mThe weather in New York is sunny, so I don't need an umbrella.\n",
+      "Final Answer: No, you don't need an umbrella in New York today.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -492,11 +492,11 @@
     {
      "data": {
       "text/plain": [
-       "{'input': 'Do I need an umbrella in Seattle today?',\n",
-       " 'output': \"No, you don't need an umbrella in Seattle today.\"}"
+       "{'input': 'Do I need an umbrella in New York today?',\n",
+       " 'output': \"No, you don't need an umbrella in New York today.\"}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,8 @@
     "    verbose=True,\n",
     ")\n",
     "\n",
-    "agent.invoke({\"input\": \"Do I need an umbrella in Seattle today?\"})\n"
+    "# agent.invoke({\"input\": \"Do I need an umbrella in Seattle today?\"})\n",
+    "agent.invoke({\"input\": \"Do I need an umbrella in New York today?\"})\n"
    ]
   },
   {
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -665,29 +666,36 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mI need to find out what's happening in San Francisco this week. I can use a web search to get the latest information on events.\n",
+      "\u001b[32;1m\u001b[1;3mI need to find out what's happening in New York this week. I can use a web search to get the latest news and events.\n",
       "Action: web_search\n",
-      "Action Input: \"current events San Francisco this week\"\u001b[0m\n",
-      "Observation: \u001b[36;1m\u001b[1;3m- San Francisco Chronicle - Bay Area news, sports, tech, food — \n",
-      "- News — Breaking Bay Area news, U.S. and World News ... — https://www.sfgate.com/news/\n",
-      "- Google News - San Francisco - Latest — https://news.google.com/topics/CAAqIQgKIhtDQkFTRGdvSUwyMHZNR1EyYkhBU0FtVnVLQUFQAQ\n",
-      "- Breaking News from KPIX-TV - CBS San Francisco — https://www.cbsnews.com/sanfrancisco/local-news/\n",
-      "- Local San Francisco News | SF Bay Area News | SFist — https://sfist.com/news/\n",
-      "- KTVU FOX 2 San Francisco | Local News, Weather, and Live ... — https://www.ktvu.com/\n",
-      "- What things to do in The City this week | Culture ... — https://www.sfexaminer.com/culture/what-things-to-do-in-the-city-this-week/article_7497511c-94cb-4178-abe9-00e988d7c78b.html\n",
-      "- Latest Bay Area News & Events | San Francisco Post — https://sanfranciscopost.com/\n",
-      "- SanFrancisco Chronicle - Bay Area news, sports, tech, food — https://www.sfchronicle.com/\n",
-      "- Events | SanFrancisco Travel — https://www.sftravel.com/things-to-do/events\u001b[0m\n",
-      "Thought:\u001b[32;1m\u001b[1;3mOkay, I've gathered some resources for current events in San Francisco this week. Now I need to synthesize this information into a concise answer.\n",
+      "Action Input: \"current events New York this week\"\u001b[0m\n",
+      "Observation: \u001b[36;1m\u001b[1;3m- New York City events — \n",
+      "- The NewYork Times - Breaking News, US News, World News and... — https://www.nytimes.com/\n",
+      "- New York News — https://www.cbsnews.com/newyork/local-news/new-york/\n",
+      "- Breaking News | Eyewitness News Feed - ABC7 New York — https://abc7ny.com/news/\n",
+      "- NYC Headlines | Spectrum News NY1 — https://ny1.com/nyc/all-boroughs/news\n",
+      "- Google News - New York - Latest — https://news.google.com/topics/CAAqIggKIhxDQkFTRHdvSkwyMHZNREpmTWpnMkVnSmxiaWdBUAE\n",
+      "- NBC 4 New York – NY local news, breaking news, weather — https://www.nbcnewyork.com/\n",
+      "- Local and National News - am New York — https://www.amny.com/news/\n",
+      "- NYC Events - Upcoming Public Events - Free Events - nyc.gov — https://www.nyc.gov/main/events\n",
+      "- NewYorkEvents 2025/2026 | Concerts, Shows, Sports & Festivals — https://new-york.events/\u001b[0m\n",
+      "Thought:\u001b[32;1m\u001b[1;3mI have gathered several links to news outlets and event listings for New York City. To provide a concise overview of current events, I will summarize the information from these sources.\n",
       "\n",
-      "Final Answer: As of today, November 2, 2023, here are some current events happening in San Francisco, according to online sources:\n",
+      "Final Answer: Here's a summary of current events in New York City (as of today, November 2, 2023, based on a web search):\n",
       "\n",
-      "*   **San Francisco Chronicle:** Offers breaking Bay Area news, sports, tech, and food news. ([https://www.sfchronicle.com/](https://www.sfchronicle.com/))\n",
-      "*   **Google News:** Provides a variety of news topics, including San Francisco local news. ([https://news.google.com/topics/CAAqIQgKIhtDQkFTRGdvSUwyMHZNR1EyYkhBU0FtVnVLQUFQAQ](https://news.google.com/topics/CAAqIQgKIhtDQkFTRGdvSUwyMHZNR1EyYkhBU0FtVnVLQUFQAQ))\n",
-      "*   **SFist:** Covers local news, events, and happenings in San Francisco. ([https://sfist.com/news/](https://sfist.com/news/))\n",
-      "*   **CBS News San Francisco:** Provides local news coverage, including breaking news. ([https://www.cbsnews.com/sanfrancisco/local-news/](https://www.cbsnews.com/sanfrancisco/local-news/))\n",
+      "*   **Breaking News:** Numerous outlets are reporting on ongoing developments, including potential legal challenges related to the Trump investigations, ongoing discussions about city budget and potential strikes, and developments in the ongoing debates surrounding housing and homelessness.\n",
+      "*   **Events:** There are numerous events happening this week, including concerts, shows, sports games, and festivals. Specific events vary widely across the boroughs.\n",
+      "*   **Ongoing Issues:** Discussions and debates continue regarding the city budget, potential strikes by public sector unions, housing affordability, and homelessness.\n",
       "\n",
-      "Please note that event listings change frequently, and I recommend checking these sources directly for the most up-to-date information.\u001b[0m\n",
+      "To get the most up-to-date information, I recommend visiting the following websites:\n",
+      "\n",
+      "*   [https://www.nytimes.com/](https://www.nytimes.com/)\n",
+      "*   [https://www.cbsnews.com/newyork/local-news/new-york/](https://www.cbsnews.com/newyork/local-news/new-york/)\n",
+      "*   [https://abc7ny.com/news/](https://abc7ny.com/news/)\n",
+      "*   [https://ny1.com/nyc/all-boroughs/news](https://ny1.com/nyc/all-boroughs/news)\n",
+      "*   [https://www.amny.com/news](https://www.amny.com/news)\n",
+      "*   [https://www.nyc.gov/main/events](https://www.nyc.gov/main/events)\n",
+      "*   [https://new-york.events/](https://new-york.events/)\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -713,7 +721,8 @@
     "# ---------------------------------------------------------\n",
     "\n",
     "try:\n",
-    "    agent.invoke({\"input\": \"What are the current events in San Francisco this week?\"})\n",
+    "    # agent.invoke({\"input\": \"What are the current events in San Francisco this week?\"})\n",
+    "    agent.invoke({\"input\": \"What are the current events in New York this week?\"})\n",
     "except Exception as e:\n",
     "    print(e)\n",
     "\n"
@@ -752,6 +761,14 @@
     "\n",
     "👏 **Great job!** Take a moment to celebrate. The techniques you implemented here power many production agents and chatbots."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1d23de6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
